<resources>
    <string name="app_name">Guess The Car</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="progress" translatable="false">%1$d/100</string>
    <string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="exit">Exit</string>
    <string name="usa">USA</string>
    <string name="italy">Italy</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="japan">Japan</string>
    <string name="germany">Germany</string>
    <string name="france">France</string>
    <string name="china">China</string>
    <string name="south_korea">South Korea</string>
    <string name="sweden">Sweden</string>
    <string name="russia">Russia</string>
    <string name="chuvashia">Chuvashia</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="interstitial_ad_id" translatable="false">ca-app-pub-7249577618188005/7365715676</string>
    <string name="rewarded_ad_id" translatable="false">ca-app-pub-7249577618188005/9809326173</string>
    <string name="brands">Brands</string>
    <string name="models">Models</string>
    <string name="countries">Countries</string>
    <string name="another_chance">Another chance?</string>
    <string name="extra_life">Do you want to get an extra life by watching a video ad?</string>
    <string name="warning">Warning</string>
    <string name="delete_all_progress">Are you sure you want to delete all progress?</string>
    <string name="delete_progress">Delete all progress</string>
    <string name="quit_game">Are you sure you want to quit the game? You current progress will be lost</string>
</resources>
